[gd_scene load_steps=25 format=3 uid="uid://0gti86el2cmt"]

[ext_resource type="Script" path="res://player/player.gd" id="1_ey1w6"]
[ext_resource type="PackedScene" uid="uid://cbnr33qykrlf8" path="res://player/states/state_manager.tscn" id="2_xkl8k"]
[ext_resource type="Script" path="res://BlockPlacing.gd" id="4_qxyy1"]
[ext_resource type="Script" path="res://player/Networking.gd" id="5_e0nlq"]
[ext_resource type="Texture2D" uid="uid://ck0ow42v1cth2" path="res://player/SS_Boyo.png" id="6_jhcwb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iq1tv"]
radius = 5.0
height = 18.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rg4do"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:sync_state_name")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:sync_state_path")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(".:sync_head_direction")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath(".:sync_velocity")
properties/4/spawn = true
properties/4/sync = true

[sub_resource type="Animation" id="Animation_2rosn"]
resource_name = "Angry"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_xqpah"]
resource_name = "Down"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(2, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_as0p1"]
resource_name = "Neutral"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_1hpnq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_csjdc"]
resource_name = "Side"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_hlhv7"]
resource_name = "SideDown"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_nh5w7"]
resource_name = "SideUp"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_mf315"]
resource_name = "Sus"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_onelh"]
resource_name = "Up"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_i02qe"]
resource_name = "Worried"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r88n4"]
_data = {
"Angry": SubResource("Animation_2rosn"),
"Down": SubResource("Animation_xqpah"),
"Neutral": SubResource("Animation_as0p1"),
"RESET": SubResource("Animation_1hpnq"),
"Side": SubResource("Animation_csjdc"),
"SideDown": SubResource("Animation_hlhv7"),
"SideUp": SubResource("Animation_nh5w7"),
"Sus": SubResource("Animation_mf315"),
"Up": SubResource("Animation_onelh"),
"Worried": SubResource("Animation_i02qe")
}

[sub_resource type="Animation" id="Animation_fdoxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Head:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_rnpf5"]
resource_name = "fall"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_fnx0v"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_xyphq"]
resource_name = "jump"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_vktlo"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_om3xo"]
_data = {
"RESET": SubResource("Animation_fdoxg"),
"fall": SubResource("Animation_rnpf5"),
"idle": SubResource("Animation_fnx0v"),
"jump": SubResource("Animation_xyphq"),
"walk": SubResource("Animation_vktlo")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_ey1w6")

[node name="Camera2d" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_iq1tv")

[node name="state_manager" parent="." instance=ExtResource("2_xkl8k")]

[node name="debug_network_label" type="Label" parent="."]
offset_left = -20.0
offset_top = -62.0
offset_right = 20.0
offset_bottom = -36.0
text = "Test"
horizontal_alignment = 1

[node name="debug_state_label" type="Label" parent="."]
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -6.0
text = "Test"
horizontal_alignment = 1

[node name="BlockPlacing" type="Node2D" parent="."]
script = ExtResource("4_qxyy1")

[node name="Networking" type="Node" parent="."]
script = ExtResource("5_e0nlq")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Networking"]
replication_config = SubResource("SceneReplicationConfig_rg4do")

[node name="Sprite" type="Node2D" parent="."]

[node name="Head" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -4)
texture = ExtResource("6_jhcwb")
hframes = 9
vframes = 6

[node name="Body" type="Sprite2D" parent="Sprite"]
position = Vector2(0, 1)
texture = ExtResource("6_jhcwb")
hframes = 9
vframes = 4
frame = 18

[node name="Animation" type="Node2D" parent="."]

[node name="Head" type="AnimationPlayer" parent="Animation"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_r88n4")
}

[node name="Body" type="AnimationPlayer" parent="Animation"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_om3xo")
}
